# licensepp

./: CMakeLists.txt  conanfile.py
src/: issuing-authority.cc  json-object.cc  json-object.h  license.cc  utils.cc
src/crypto/: aes.cc  base16.cc  base64.cc  rsa.cc
test/: CMakeLists.txt  license-manager-for-test.h  license-manager-test.h
